Added link to Netlify

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
 			  </nav>
 		</p>
 	</div>
+    <p>
+        <a href="https://626ed754f0345b09df2c5ef8--stellar-chebakia-bf88d8.netlify.app/" target="_blank" >Open source code </a>by Mafalda Sá
+    </p>
     <script src="src/app.js">
     </script>
 </body>
