--- a/index.html
+++ b/index.html
@@ -23,10 +23,17 @@
 		</h2>
 		<ul>
 			<li class="temperature">
-                🌧️ <span id="temperatureValue">17 </span><a href="#" id="Celsius" style= "color: #eaf6f6">°C</a> |
-                  <a href="#" id="Fahrenheit" style= "color: #eaf6f6">°F</a>
-			
+                <img class="mian-icon" src="" alt="" id="icon"/><span id="temperatureValue">17 </span><a href="#" id="Celsius" style= "color: #eaf6f6">°C</a> |
+                  <a href="#" id="fahrenheit" style= "color: #eaf6f6">°F</a>
 			</li>
+            <li id="detailWeather">
+            </li>
+            <li>
+                Humidity: <span id="humidity">67</span>%
+            </li>
+            <li>
+                Wind:<span id="wind">7</span>km/h
+            </li>
 		</ul>
 		<div class="row">
             <div class="col-4">
